test-results/bad_define_error.c.err
[31m/mnt/c/Users/matthew/git/upp/examples/bad_define_error.c:1:1: error: [UPP003] Macro definition for '@BadMacro' is missing parentheses. Use '@define BadMacro() { ... }'.[0m
@define BadMacro {
[31m^[0m
